--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Diskrétní schůzky</title>
-<meta content='https://i.postimg.cc/9MWMPzyz/Whats-App-Image-2024-07-13-at-11-40-05-PM.jpg' property='og:image'/>
+<title>Moje fotokatalog</title>
+<meta content='https://i.postimg.cc/KjzxqTLS/Screenshot-5.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>Fotogalerie</title>
+<title>Galerie obrázků</title>
 <div class="layer">
 </div>
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
-<img src="" alt="">
+<img src="https://i.imgur.com/sZdtUEq.png" alt="">
 </div>
 <div class="step-item" style="display: block;">
-<div class="question-title ">
-Nabízím sexuální služby, tance a erotické masáže v domácnosti, chcete si prohlédnout můj katalog?</div>
+<div class="question-title">
+Přijdeme k vám v noci, služba je k dispozici po celé městě, chcete vidět můj katalog?
+</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 Ano
@@ -35,19 +36,19 @@ Ne
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
-<div class="question-title ">
-POZOR! Souhlasíte s tím, že budete respektovat ženy, které uvidíte níže? Pokud někoho znáte, neříkejte to a nešířte zvěsti.</div>
+<div class="question-title">
+POZOR! Souhlasíte s tím, že budete respektovat ženy, které uvidíte níže? Pokud někoho znáte, nic neříkejte a nešířte zvěsti</div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={Strongeer}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">SOUHLASÍM
+<a href="https://shrlc.com/qsYbZaq" class="step-btn submit-btn tr-submit-button showmail">SOUHLASÍM
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-4.mp4" type="video/mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/275415/1665133459/images/4.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
